--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -178,6 +178,21 @@
     padding-bottom: 25px;
   }
 
+  .movie-trailer-button {
+    width: 220px;
+    margin-left: 0px;
+  }
+
+  .add-favorite-button {
+    width: 220px;
+    margin-left: 0px;
+  }
+
+  .remove-favorite-button {
+    width: 220px;
+    margin-left: 0px;
+  }
+
 }
 
 
