--- a/src/pages/MoviePage/MoviePage.scss
+++ b/src/pages/MoviePage/MoviePage.scss
@@ -133,7 +133,7 @@
   width: 280px;
   margin-left: 14px;
   padding: 8px 16px;
-  background-color: rgba(255, 255, 255, 0.185);;
+  background-color: rgba(255, 255, 255, 0.185);
   color: white;
   height: 35px;
   text-decoration: none;
